# summarizer

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  task.md  template.yaml
app/: aws_lambda_handler.py  main.py
app/core/: config.py
app/repositories/: documents_repository.py
app/routers/: documents_router.py
app/schemas/: document_schema.py
app/services/: documents_service.py  summarizer_service.py
tests/: conftest.py  test_documents_api.py
