[project]
name = "summarizer"
version = "0.1.0"
description = "FastAPI document summarizer service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "mangum>=0.17",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "httpx>=0.27",
]

dev = [
  "black>=24.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

